// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientSearch renderForm should match a snapshot when loginMode is DESKTOP 1`] = `
<React.Fragment>
  <H3
    className="mb-0"
    isHeadingSection={true}
  >
    Client Search
  </H3>
  <Section>
    <FadeIn>
      <Form>
        <Input
          id="name"
          labelText="Search by name"
          name="name"
          placeholder="Firstname or Surname"
          type="text"
        />
        <Input
          id="address"
          labelText="Search by address"
          name="address"
          placeholder="Streetname, Village, Town or Postcode"
          type="text"
        />
        <SelectBox
          id="identityCheck"
          labelText="Search by ID Status"
          name="identityCheck"
          options={
            Array [
              Object {
                "label": "Please select…",
                "value": "",
              },
              Object {
                "label": "Pass",
                "value": "Pass",
              },
              Object {
                "label": "Fail",
                "value": "Fail",
              },
              Object {
                "label": "Pending",
                "value": "Pending",
              },
              Object {
                "label": "Cancelled",
                "value": "Cancelled",
              },
              Object {
                "label": "Warnings",
                "value": "Warnings",
              },
              Object {
                "label": "Unchecked",
                "value": "Unchecked",
              },
            ]
          }
        />
        <Button
          className="is-right"
          type="submit"
          variant="primary"
        >
          Search
        </Button>
        <AcButton
          buttonProps={
            Object {
              "disabled": true,
              "type": "button",
              "variant": "primary",
            }
          }
          dynamicLinkParams={
            Object {
              "appMode": "DESKTOP",
              "entityType": "contacts",
              "queryParams": Object {
                "address": undefined,
                "appId": undefined,
                "appParam": "cntCode",
                "name": undefined,
              },
            }
          }
        >
          Advanced Search
        </AcButton>
      </Form>
    </FadeIn>
  </Section>
</React.Fragment>
`;

exports[`ClientSearch renderForm should match a snapshot when loginMode is WEB 1`] = `
<React.Fragment>
  <H3
    className="mb-0"
    isHeadingSection={true}
  >
    Client Search
  </H3>
  <Section>
    <FadeIn>
      <Form>
        <Input
          id="name"
          labelText="Search by name"
          name="name"
          placeholder="Firstname or Surname"
          type="text"
        />
        <Input
          id="address"
          labelText="Search by address"
          name="address"
          placeholder="Streetname, Village, Town or Postcode"
          type="text"
        />
        <SelectBox
          id="identityCheck"
          labelText="Search by ID Status"
          name="identityCheck"
          options={
            Array [
              Object {
                "label": "Please select…",
                "value": "",
              },
              Object {
                "label": "Pass",
                "value": "Pass",
              },
              Object {
                "label": "Fail",
                "value": "Fail",
              },
              Object {
                "label": "Pending",
                "value": "Pending",
              },
              Object {
                "label": "Cancelled",
                "value": "Cancelled",
              },
              Object {
                "label": "Warnings",
                "value": "Warnings",
              },
              Object {
                "label": "Unchecked",
                "value": "Unchecked",
              },
            ]
          }
        />
        <Button
          className="is-right"
          type="submit"
          variant="primary"
        >
          Search
        </Button>
      </Form>
    </FadeIn>
  </Section>
</React.Fragment>
`;

exports[`ClientSearch should match a snapshot 1`] = `
<ErrorBoundary>
  <Formik
    initialValues={
      Object {
        "address": "",
        "identityCheck": "",
        "name": "",
      }
    }
    onSubmit={[Function]}
    validationSchema={
      ObjectSchema {
        "_blacklist": ReferenceSet {
          "list": Set {},
          "refs": Map {},
        },
        "_blacklistError": undefined,
        "_excludedEdges": Array [],
        "_nodes": Array [
          "address",
          "name",
        ],
        "_sortErrors": [Function],
        "_typeError": [Function],
        "_whitelist": ReferenceSet {
          "list": Set {},
          "refs": Map {},
        },
        "_whitelistError": undefined,
        "conditions": Array [],
        "deps": Array [],
        "exclusiveTests": Object {},
        "fields": Object {
          "address": StringSchema {
            "_blacklist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_blacklistError": undefined,
            "_typeError": [Function],
            "_whitelist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_whitelistError": undefined,
            "conditions": Array [],
            "deps": Array [],
            "exclusiveTests": Object {
              "matches": false,
              "max": true,
              "trim": false,
            },
            "spec": Object {
              "abortEarly": true,
              "nullable": false,
              "presence": "optional",
              "recursive": true,
              "strict": false,
              "strip": false,
            },
            "tests": Array [
              [Function],
              [Function],
              [Function],
            ],
            "transforms": Array [
              [Function],
              [Function],
            ],
            "type": "string",
          },
          "name": StringSchema {
            "_blacklist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_blacklistError": undefined,
            "_typeError": [Function],
            "_whitelist": ReferenceSet {
              "list": Set {},
              "refs": Map {},
            },
            "_whitelistError": undefined,
            "conditions": Array [
              Condition {
                "fn": [Function],
                "refs": Array [
                  Reference {
                    "getter": [Function],
                    "isContext": false,
                    "isSibling": true,
                    "isValue": false,
                    "key": "address",
                    "map": undefined,
                    "path": "address",
                  },
                ],
              },
            ],
            "deps": Array [
              "address",
            ],
            "exclusiveTests": Object {
              "matches": false,
              "max": true,
              "trim": false,
            },
            "spec": Object {
              "abortEarly": true,
              "nullable": false,
              "presence": "optional",
              "recursive": true,
              "strict": false,
              "strip": false,
            },
            "tests": Array [
              [Function],
              [Function],
              [Function],
            ],
            "transforms": Array [
              [Function],
              [Function],
            ],
            "type": "string",
          },
        },
        "spec": Object {
          "abortEarly": true,
          "nullable": false,
          "presence": "optional",
          "recursive": true,
          "strict": false,
          "strip": false,
        },
        "tests": Array [],
        "transforms": Array [
          [Function],
        ],
        "type": "object",
      }
    }
  >
    <Component />
  </Formik>
</ErrorBoundary>
`;
